--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,9 @@ Version: 0.0.0.9000
 Authors@R: 
     c(person("Huaide", "Liu", , "jcakcino@gmail.com", role = c("aut", "cre")),
       person("Wang", "Liao", , "liaowang913@outlook.com", role = "aut"))
-Description: This package can calculate the knapsack problem in 3 ways:
+Description: This package provides functions to solve the knapsack problem in 3 ways:
              brute_force_knapsack, knapsack_dynamic and greedy_knapsack.
-             At the same time, some optimization methods to improve code performance are also introduced
+             Some optimization methods to improve code performance are also introduced.
 License: GPL-2 | GPL-3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
